--- a/strings.html
+++ b/strings.html
@@ -37,7 +37,7 @@
 
         // Выделить число
         function extractCurrencyValue(str) {
-            return +str.slice(1);
+            return str.slice(1);
         }
         console.log(truncate("Всем привет!", 20));
     </script>
